--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".RunApplication"
         android:theme="@style/Theme.AppCompat.DayNight">
         <meta-data
             android:name="com.amap.api.v2.apikey"
