finish user center part

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,6 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -50,8 +49,11 @@
         <activity
             android:name=".UserInfoActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
-        <activity android:name=".run.RunConfigActivity"></activity>
-        <service android:name="com.amap.api.location.APSService"></service>
+        <activity android:name=".run.RunConfigActivity" />
+
+        <service android:name="com.amap.api.location.APSService" />
+
+        <activity android:name=".CoinDetailActivity"></activity>
     </application>
 
 </manifest>
