--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,9 +40,9 @@
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="fbb5a4e30136b705b73412f24d06b1de" />
-        <meta-data
+        <!--<meta-data
             android:name="leancloud"
-            android:value="${channel_id}" />
+            android:value="${channel_id}" />-->
 
         <activity
             android:name=".SplashActivity"
