--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+            manifest.srcFile 'src/main/AndroidManifest.xml'
+        }
+    }
 }
 
 dependencies {
@@ -49,4 +55,13 @@ dependencies {
     compile files('libs/MiPush_SDK_Client_3_1_2.jar')
     compile files('libs/avoscloud-sdk-v3.13.15.jar')
     compile files('libs/avoscloud-statistics-v3.13.15.jar')
+    compile files('libs/libammsdk.jar')
+    // for weixin login & share
+    compile files('libs/mta-sdk-1.6.2.jar')
+    // for qq login & share
+    compile files('libs/open_sdk_r5756.jar')
+    // for qq login & share
+    compile files('libs/weiboSDKCore_3.1.4.jar')
+    // for weibo login & share
+    compile files('libs/alipaySdk-20161009.jar')
 }
