--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     compile files('libs/MiPush_SDK_Client_3_1_2.jar')
     compile files('libs/avoscloud-sdk-v3.13.15.jar')
     compile files('libs/avoscloud-statistics-v3.13.15.jar')
+    compile 'com.larswerkman:HoloColorPicker:1.5'
 }
