--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,6 @@
     <uses-permission android:name="com.runnerfun.permission.MIPUSH_RECEIVE" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
-
     <application
         android:name=".RunApplication"
         android:allowBackup="true"
@@ -40,9 +39,11 @@
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="fbb5a4e30136b705b73412f24d06b1de" />
-        <!--<meta-data
+        <!--
+            <meta-data
             android:name="leancloud"
-            android:value="${channel_id}" />-->
+            android:value="${channel_id}" />
+        -->
 
         <activity
             android:name=".SplashActivity"
@@ -50,6 +51,7 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -92,7 +94,8 @@
             android:name=".RecordProvider"
             android:authorities="com.runnerfun.record"
             android:enabled="true"
-            android:exported="false"/>
+            android:exported="false" />
+
         <activity
             android:name=".CoinDetailActivity"
             android:screenOrientation="portrait"
@@ -155,6 +158,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
@@ -169,6 +173,16 @@
         <!-- for Mi push end -->
 
         <service android:name="com.amap.api.location.APSService" />
+
+        <activity android:name=".MapConfigActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
+            />
+        <activity android:name=".ShareActivity"
+            android:theme="@style/Theme.AppCompat.DayNight"
+            />
+        <activity android:name=".ShareElemActivity"
+            android:theme="@style/Theme.AppCompat.DayNight"
+            />
     </application>
 
 </manifest>
