--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,6 +107,9 @@
             android:name=".UserInfoEditActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".RunRecordActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".model.thirdpart.AliPayActivity"
             android:screenOrientation="portrait" />
         <activity
@@ -202,6 +205,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
@@ -215,6 +219,7 @@
         </receiver>
 
         <service android:name="com.amap.api.location.APSService" />
+
     </application>
 
 </manifest>
