--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,6 @@
     <uses-permission android:name="com.runnerfun.permission.MIPUSH_RECEIVE" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
-
     <application
         android:name=".RunApplication"
         android:allowBackup="true"
@@ -224,17 +223,17 @@
 
         <service android:name="com.amap.api.location.APSService" />
 
-        <activity android:name=".MapConfigActivity"
+        <activity
+            android:name=".MapConfigActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ShareActivity"
             android:screenOrientation="portrait"
-            />
-        <activity android:name=".ShareActivity"
-            android:theme="@style/Theme.AppCompat.Light"
+            android:theme="@style/Theme.AppCompat.Light"/>
+        <activity
+            android:name=".ShareElemActivity"
             android:screenOrientation="portrait"
-            />
-        <activity android:name=".ShareElemActivity"
-            android:theme="@style/Theme.AppCompat.Light"
-            android:screenOrientation="portrait"
-            />
+            android:theme="@style/Theme.AppCompat.Light"/>
 
     </application>
 
