--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,12 +55,10 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:launchMode="singleTask"
             android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".RegisterActivity"
@@ -71,7 +69,9 @@
         <activity
             android:name=".UserInfoActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".RunConfigActivity" />
+        <activity
+            android:name=".RunConfigActivity"
+            android:screenOrientation="portrait" />
 
         <service android:name="com.amap.api.location.APSService" />
 
