--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,9 +90,7 @@
 
         <activity
             android:name=".MapActivity"
-            android:label="@string/title_activity_map">
-
-           </activity>
+            android:screenOrientation="portrait"/>
 
         <service
             android:name=".RecordService"
