--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,11 +59,10 @@
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="b1249815ff057029f91008cb70a99a54"/>
-        <!--
-            <meta-data
+
+        <meta-data
             android:name="leancloud"
-            android:value="${channel_id}" />
-        -->
+            android:value="01"/>
 
         <service android:name="com.amap.api.location.APSService"/>
 
